chore(ci): обновить запуск метрик

--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -30,4 +30,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run metrics collection
-        run: python -m threads_metrics.main --heartbeat
+        run: python -m threads_metrics.main run
