--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 35
     env:
+      ID_GOOGLE_TABLE: ${{ secrets.ID_GOOGLE_TABLE }}
       THREADS_METRICS_API_TOKEN: ${{ secrets.THREADS_METRICS_API_TOKEN }}
       THREADS_METRICS_DB_URL: ${{ secrets.THREADS_METRICS_DB_URL }}
       THREADS_METRICS_HEARTBEAT_INTERVAL: ${{ secrets.THREADS_METRICS_HEARTBEAT_INTERVAL }}
