chore(ci): добавить секрет url gas развертывания

--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -17,6 +17,7 @@ jobs:
       ID_GOOGLE_TABLE: ${{ secrets.ID_GOOGLE_TABLE }}
       THREADS_METRICS_API_TOKEN: ${{ secrets.THREADS_METRICS_API_TOKEN }}
       THREADS_METRICS_DB_URL: ${{ secrets.THREADS_METRICS_DB_URL }}
+      URL_GAS_RAZVERTIVANIA: ${{ secrets.URL_GAS_RAZVERTIVANIA }}
       THREADS_METRICS_HEARTBEAT_INTERVAL: ${{ secrets.THREADS_METRICS_HEARTBEAT_INTERVAL }}
       PYTHONPATH: src
     steps:
