--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -15,6 +15,7 @@ jobs:
     timeout-minutes: 35
     env:
       ID_GOOGLE_TABLE: ${{ secrets.ID_GOOGLE_TABLE }}
+      GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
       THREADS_METRICS_API_TOKEN: ${{ secrets.THREADS_METRICS_API_TOKEN }}
       THREADS_METRICS_DB_URL: ${{ secrets.THREADS_METRICS_DB_URL }}
       URL_GAS_RAZVERTIVANIA: ${{ secrets.URL_GAS_RAZVERTIVANIA }}
