--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -8,8 +8,51 @@ on:
 concurrency:
   group: threads-metrics
 
+permissions:
+  actions: write
+  contents: read
+
 jobs:
+  guard:
+    runs-on: ubuntu-latest
+    outputs:
+      should_continue: ${{ steps.check.outputs.should_continue }}
+    steps:
+      - name: Проверить активные запуски
+        id: check
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const response = await github.request(
+              'GET /repos/{owner}/{repo}/actions/workflows/{workflow_id}/runs',
+              {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                workflow_id: 'threads-metrics.yml',
+                status: 'in_progress',
+                per_page: 50,
+              }
+            );
+            const otherRuns = response.data.workflow_runs.filter(
+              (run) => run.id !== context.runId
+            );
+            const shouldContinue = otherRuns.length === 0;
+            core.setOutput('should_continue', shouldContinue ? 'true' : 'false');
+            if (!shouldContinue) {
+              core.notice(`Найдено ${otherRuns.length} активных запусков, отменяем текущий.`);
+              await github.request(
+                'POST /repos/{owner}/{repo}/actions/runs/{run_id}/cancel',
+                {
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  run_id: context.runId,
+                }
+              );
+            }
+
   run-metrics:
+    needs: guard
+    if: needs.guard.outputs.should_continue == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 100
     env:
