--- a/.github/workflows/cancel-pending.yml
+++ b/.github/workflows/cancel-pending.yml
@@ -3,16 +3,27 @@ name: Cancel queued Threads Metrics runs
 on:
   workflow_dispatch:
   schedule:
-    - cron: "* * * * *"
+    - cron: "*/15 * * * *"
+
+env:
+  STOP_ALL_WORKFLOW: ${{ secrets.STOP_ALL_WORKFLOW }}
 
 concurrency:
   group: cancel-pending
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  guard:
+  stop-all:
+    if: env.STOP_ALL_WORKFLOW == 'true'
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    steps:
+      - name: Остановить workflow
+        run: echo "STOP_ALL_WORKFLOW=true — выполняем мгновенную остановку воркфлоу."
+
+  guard:
+    if: env.STOP_ALL_WORKFLOW != 'true'
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -27,4 +38,4 @@ jobs:
           export PYTHONPATH=src
           export GITHUB_OWNER="${GITHUB_REPOSITORY%%/*}"
           export GITHUB_REPO="${GITHUB_REPOSITORY##*/}"
-          python -m threads_metrics.main cancel-pending --interval 30
+          python -m threads_metrics.main cancel-pending --interval 120
