--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -2,18 +2,30 @@ name: Threads Metrics
 
 on:
   schedule:
-    - cron: '*/60 * * * *'
+    - cron: '0 */2 * * *'
   workflow_dispatch:
+
+env:
+  STOP_ALL_WORKFLOW: ${{ secrets.STOP_ALL_WORKFLOW }}
 
 concurrency:
   group: threads-metrics
+  cancel-in-progress: true
 
 permissions:
   actions: write
   contents: read
 
 jobs:
+  stop-all:
+    if: env.STOP_ALL_WORKFLOW == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Остановить workflow
+        run: echo "STOP_ALL_WORKFLOW=true — выполняем мгновенную остановку воркфлоу."
+
   guard:
+    if: env.STOP_ALL_WORKFLOW != 'true'
     runs-on: ubuntu-latest
     outputs:
       should_continue: ${{ steps.check.outputs.should_continue }}
@@ -51,10 +63,10 @@ jobs:
             }
 
   run-metrics:
+    if: env.STOP_ALL_WORKFLOW != 'true' && needs.guard.outputs.should_continue == 'true'
     needs: guard
-    if: needs.guard.outputs.should_continue == 'true'
     runs-on: ubuntu-latest
-    timeout-minutes: 100
+    timeout-minutes: 60
     env:
       ID_GOOGLE_TABLE: ${{ secrets.ID_GOOGLE_TABLE }}
       GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
