--- a/.github/workflows/threads-metrics.yml
+++ b/.github/workflows/threads-metrics.yml
@@ -1,8 +1,8 @@
 name: Threads Metrics
 
 on:
-  schedule:
-    - cron: '0 */2 * * *'
+#  schedule:
+#    - cron: '0 */2 * * *'
   workflow_dispatch:
 
 env:
