Disable scheduled runs for cancel-pending workflow
Comment out the schedule for the workflow.

--- a/.github/workflows/cancel-pending.yml
+++ b/.github/workflows/cancel-pending.yml
@@ -2,8 +2,8 @@ name: Cancel queued Threads Metrics runs
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "*/15 * * * *"
+ # schedule:
+ #   - cron: "*/15 * * * *"
 
 env:
   STOP_ALL_WORKFLOW: ${{ secrets.STOP_ALL_WORKFLOW }}
