--- a/.github/workflows/sheets-sync.yml
+++ b/.github/workflows/sheets-sync.yml
@@ -1,8 +1,8 @@
 name: Sync Google Sheets
 
 on:
-  schedule:
-    - cron: "*/30 * * * *"
+#  schedule:
+#    - cron: "*/30 * * * *"
   workflow_dispatch:
 
 env:
